--- a/templates/home.html
+++ b/templates/home.html
@@ -17,7 +17,7 @@
 
     
 
-    <a href="" target="_blank" class="github-corner" title="View source on GitHub">
+    <a href="https://github.com/aryaman0098/Movie-Recommender-Engine" target="_blank" class="github-corner" title="View source on GitHub">
         <svg data-toggle="tooltip"
         data-placement="left" width="80" height="80" viewBox="0 0 250 250"
       style="fill:#e50914; color:#fff; position: fixed;z-index:100; top: 0; border: 0; right: 0;" aria-hidden="true">
